integration/fixtures/k8s-session-persistence/gateway-xbackendpolicy-traefikservice/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami-xbtp-ts
  namespace: default
spec:
  parentRefs:
    - name: my-gateway
  hostnames:
    - whoami-xbtp-ts.localhost
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: whoami-xbtp-ts
          kind: TraefikService
          group: traefik.io
          port: 80
      sessionPersistence:
        type: Header
        sessionName: X-Route-Session
