integration/fixtures/k8s-session-persistence/gateway-xbackendpolicy-traefikservice/traefikservice.yaml
---
apiVersion: traefik.io/v1alpha1
kind: TraefikService
metadata:
  name: whoami-xbtp-ts
  namespace: default
spec:
  weighted:
    sticky:
      header:
        name: X-TS-Sticky
    services:
      - name: whoami-xbtp-ts
        port: 80
