integration/fixtures/k8s-session-persistence/gateway-xbackendpolicy-traefikservice/xbackendtrafficpolicy.yaml
---
apiVersion: gateway.networking.x-k8s.io/v1alpha1
kind: XBackendTrafficPolicy
metadata:
  name: whoami-xbtp-ts
  namespace: default
spec:
  targetRefs:
    - group: ""
      kind: Service
      name: whoami-xbtp-ts
  sessionPersistence:
    type: Header
    sessionName: X-Policy-Session
